# lms_project

./: .env.sample  .gitignore  celerybeat-schedule  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py.back  urls.py  validators.py  views.py
main/management/commands/: fill_payment.py
main/migrations/: 0001_initial.py  0002_alter_lesson_preview.py  0003_payment.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_alter_subscription_is_signed.py  0007_alter_subscription_unique_together.py  0008_course_price_payment_is_payed_and_more.py  0009_rename_is_payed_payment_is_paid_and_more.py  0010_course_updated_at.py
main/tests/: __init__.py  courses.py  lessons.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: createmoderator.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
