[tool.poetry]
name = "lms-project"
version = "0.1.0"
description = ""
authors = ["alersandr <zasbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.6"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
dotenv = "^0.9.9"
djangorestframework = "^3.16.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.11"
requests = "^2.32.5"
celery = "^5.5.3"
redis = "^7.1.0"
django-celery-beat = "^2.8.1"
eventlet = "^0.40.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
